@@ -15,4 +15,20 @@ sub new {
     );
 }
 
+# Copy from Module::Build::Pluggable::XSUtil
+sub HOOK_configure {
+    my $self = shift;
+
+    # c++ options
+    if ( $self->{'c++'} ) {
+        require ExtUtils::CBuilder;
+        my $cbuilder = ExtUtils::CBuilder->new( quiet => 1 );
+        $cbuilder->have_cplusplus or do {
+            warn
+                "This environment does not have a C++ compiler(OS unsupported)\n";
+            exit 0;
+        };
+    }
+}
+
 1;
