@@ -4,6 +4,7 @@ Revision history for Perl extension Text-Sass-XS
 
 0.03 2013-06-17T13:21:24Z
     - Adds OO Interface.
+    - Adds ExtUtils::CBuilder to dependencies.
 
 0.02 2013-06-16T13:52:56Z
     - Uses g++ to compile xs instead of cc.
